# liquid-dsp

./: .codecov.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .tarignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  HISTORY  LICENSE  NOTES  NOTES.txt  README  README.md  README.rst  README.txt  TODO  TODO.txt  TROUBLESHOOTING  TROUBLESHOOTING.txt  bootstrap.sh  common.mk  config.h.cmake  config.h.in  configure.ac  configure.in  help.make.txt  library.json  liquid.pc.in  makefile  makefile.in  newbench_example.c  oprof.sh  pyproject.toml  reconf  requirements.txt  setup.py  todolistgen.py
doc/: .gitignore  README.md  README.txt  TODO.txt  agc_squelch_pgf.tex  configure.ac  figures.agc.mk  figures.audio.mk  figures.buffer.mk  figures.equalization.mk  figures.filter.mk  figures.framing.mk  figures.interleaver.mk  figures.math.mk  figures.mk  figures.modem.mk  figures.nco.mk  figures.sequence.mk  liquid.bib  liquid.tex  makefile  makefile.in  reconf
doc/autotest/: index.rst  macros.rst
doc/core/: error.rst  index.rst  logging.rst
doc/data/: README.txt  fec_ber_conv.gnu  fec_ber_convpunc.gnu  fec_ber_ebn0_block.gnu  fec_ber_ebn0_conv.gnu  fec_ber_ebn0_convpunc.gnu  fec_ber_ebn0_hamming.gnu  fec_ber_ebn0_hard.gnu  fec_ber_ebn0_soft.gnu  fec_ber_esn0_block.gnu  fec_ber_esn0_conv.gnu  fec_ber_esn0_convpunc.gnu  fec_ber_esn0_hamming.gnu  fec_ber_hamming.gnu  fft_spgram_freq.gnu  fft_spgram_time.gnu  modem_ber_ebn0_M128.gnu  modem_ber_ebn0_M16.gnu  modem_ber_ebn0_M2.gnu  modem_ber_ebn0_M256.gnu  modem_ber_ebn0_M32.gnu  modem_ber_ebn0_M4.gnu  modem_ber_ebn0_M64.gnu  modem_ber_ebn0_M8.gnu  modem_ber_ebn0_apsk.gnu  modem_ber_ebn0_arb.gnu  modem_ber_ebn0_ask.gnu  modem_ber_ebn0_optqam.gnu  modem_ber_ebn0_psk.gnu  modem_ber_ebn0_qam.gnu  modem_phase_error_M128.gnu  modem_phase_error_M4.gnu  modem_phase_error_M64.gnu  modem_phase_error_M8.gnu
doc/data/ber-modem/: README.txt
doc/data/fec-ber/: fec_ber_ebn0_block.gnu  fec_ber_ebn0_conv.gnu  fec_ber_ebn0_convpunc.gnu  fec_ber_ebn0_hard.gnu  fec_ber_ebn0_hardsoft.gnu  fec_ber_ebn0_soft.gnu  fec_ber_esn0_block.gnu  fec_ber_esn0_conv.gnu  fec_ber_esn0_convpunc.gnu
doc/data/framing/: flexframe_performance.gnu  frame64_performance.gnu  gmskframe_performance.gnu  ofdmflexframe_performance.gnu
doc/data/interleaver-ber/: interleaver_ber_ebn0.gnu
doc/data/modem-ber/: modem_ber_ebn0_M128.gnu  modem_ber_ebn0_M16.gnu  modem_ber_ebn0_M2.gnu  modem_ber_ebn0_M32.gnu  modem_ber_ebn0_M4.gnu  modem_ber_ebn0_M64.gnu  modem_ber_ebn0_apsk.gnu  modem_ber_ebn0_arb.gnu  (+4 more)
doc/figures.gen/: .gitignore  README
doc/figures.pgf/: .gitignore  agc_squelch.tex  agc_transfer_function.tex  bpacket_structure.tex  fft_plan_diagram.tex  fft_spgram_diagram.tex  frame64_structure.tex  framing_structure.tex  liquid-colors.tex  msresamp_decim_diagram.tex  msresamp_interp_diagram.tex  nco_pll_diagram.tex  ofdm_cyclic_prefix_diagram.tex  ofdm_window_tapering_diagram.tex  ofdmflexframe_spectrum.tex  ofdmflexframe_structure.tex  window.tex
doc/include/: liquid.doc.h  liquid.doc.html.h  listings_check.h
doc/lib/: htmlgen.c  htmlgen.envparser.c  htmlgen.tokenparser.c  liquid_doc_compute_psd.c  liquid_doc_estimate_snr.c  liquid_doc_flexframe_fer.c  liquid_doc_frame64_fer.c  liquid_doc_freqz.c  liquid_doc_gmskframe_fer.c  liquid_doc_ofdmflexframe_ber.c  liquid_doc_ofdmflexframe_fer.c  liquid_doc_simulate_per.c
doc/listings/: agc.example.c  ampmodem.example.c  autocorr.example.c  bpacket.example.c  checksum.example.c  crc.example.c  crc32.example.c  cvsd.example.c  decim.example.c  dotprod_rrrf.example.c  eqlms_cccf.example.c  eqlms_cccf_blind.example.c  fec.example.c  fft.example.c  fft_dct.example.c  firdecim.example.c  firdes_kaiser.example.c  firdespm.example.c  firfarrow_crcf.example.c  firfilt.example.c  firhilb.example.c  firinterp.example.c  freqmodem.example.c  ga_search.example.c  gasearch.example.c  gmskmodem.example.c  gport.direct.example.c  gport.indirect.example.c  gradient_search.example.c  gradsearch.example.c  iirdes.example.c  iirfilt.example.c  interleaver.example.c  interp.example.c  lifecycle.example.c  matrix.example.c  modem.example.c  modem_arb.example.c  msresamp_crcf.example.c  nco.c  (+14 more)
doc/sandbox/: filter_cheby1.c  makefile  plottest.gnu
doc/scripts/: doc-html-gen.py  htmlgen_test.tex  liquid-pygmentize.py  listings_check.c
doc/sections/: agc.tex  ann.tex  audio.tex  buffer.tex  channel.tex  dotprod.tex  equalization.tex  experimental.tex  fec.tex  fft.tex  filter.tex  fpm.tex  framing.tex  installation.tex  interleaver.tex  introduction.tex  math.tex  matrix.tex  modem.tex  multicarrier.tex  multichannel.tex  nco.tex  optim.tex  quantization.tex  random.tex  sequence.tex  tutorial_fec.tex  tutorial_framing.tex  tutorial_modem.tex  tutorial_ofdmflexframe.tex  tutorial_pll.tex  utility.tex
doc/src/: agc_squelch.c  agc_squelch_pgf.c  agc_transient.c  audio_cvsd.c  doc-html-gen.c  eqlms_cccf.c  eqlms_cccf_blind.c  eqlms_vs_eqrls.c  equalizer_cccf.c  estimate_snr_fec.c  estimate_snr_modem.c  estimate_snr_test.c  fft_example.c  fft_spgram.c  filter_cheby1.c  filter_decim_crcf.c  filter_firdecim_crcf.c  filter_firdes_gmskrx_freq.c  filter_firdes_gmskrx_time.c  filter_firdespm.c  filter_firfarrow_crcf.c  filter_firfilt_crcf.c  filter_firhilb_decim_crcf.c  filter_firinterp_crcf.c  filter_iirdes.c  filter_iirdes_example.c  filter_iirfilt_crcf.c  filter_interp_crcf.c  filter_kaiser.c  filter_msresamp_crcf.c  filter_resamp2_crcf_interp.c  filter_resamp_crcf.c  filter_rnyquist.c  filter_symsync_crcf.c  filter_window.c  flexframe_fer.c  fpm_gentab.c  frame64_fer.c  gmskframe_fer.c  interleaver_scatterplot.c  (+24 more)
doc/tutorials/: fec_basic_tutorial.c  fec_extra_tutorial.c  fec_init_tutorial.c  fec_tutorial.c  framing_basic_tutorial.c  framing_init_tutorial.c  framing_intermediate_tutorial.c  framing_tutorial.c  modem_tutorial.c  ofdmflexframe_advanced_tutorial.c  ofdmflexframe_basic_tutorial.c  ofdmflexframe_init_tutorial.c  ofdmflexframe_intermediate_tutorial.c  ofdmflexframe_tutorial.c  pll_basic_tutorial.c  pll_init_tutorial.c  pll_tutorial.c
(+2275 files in other folders)
